# Task-Tracker-CLI

./: .gitignore  CMakeLists.txt  README.md  app.cpp  app.h  github_setup.sh  main.cpp  task.cpp  task.h  task_manager.cpp  task_manager.h  task_matrix.cpp  task_matrix.h
.github/workflows/: build.yml
docs/html/: README_8md.html  annotated.html  annotated_dup.js  app_8cpp.html  app_8cpp_source.html  app_8h.html  app_8h.js  app_8h_source.html  classApp-members.html  classApp.html  classApp.js  classTask-members.html  classTask.html  classTask.js  classTaskManager-members.html  classTaskManager.html  classTaskManager.js  classTaskMatrix-members.html  classTaskMatrix.html  classTaskMatrix.js  classes.html  conceptStringable.html  conceptTaskLike.html  concepts.html  concepts.js  doxygen_crawl.html  files.html  files_dup.js  functions.html  functions_enum.html  functions_func.html  functions_vars.html  globals.html  globals_enum.html  globals_func.html  globals_type.html  globals_vars.html  graph_legend.html  index.html  index.js  (+29 more)
docs/html/search/: all_0.js  all_1.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_20.js  all_21.js  all_22.js  all_23.js  all_24.js  all_25.js  all_26.js  all_27.js  all_28.js  all_29.js  all_2a.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  (+52 more)
